--- a/package.json
+++ b/package.json
@@ -5,17 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run-slack": "nodemon src/slack.js",
-    "start": "netlify-lambda serve src/slack.js",
-    "build": "netlify-lambda build src"
+    "run-slack": "nodemon src/slack.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
